--- a/prectice.html
+++ b/prectice.html
@@ -196,7 +196,7 @@
         </div>
       </div>
       <div class="flex  p-6 bg-slate-50 rounded-lg shadow">
-        div class="w-20"
+        <div class="w-20">
           <img class="w-20" src="images/question.png" alt="">
         </div>
         <div class="ml-6">
