--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
     <h1 class="text-3xl font-bold uppercase">Woman <span class="text-violet-900">Jacket</span></h1>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10 my-4">
 
-      <div class="p-4 rounded space-y-2 shadow-xl">
+      <div class="p-4 rounded space-y-2 shadow-xl hover:shadow-inner hover:scale-95
+      scale-100 transition ease-in delay-75">
         <div class="bg-[#d3dede] p-10 rounded-xl">
           <img class="w-full" src="images/jacket-1.png" alt="">
         </div>
@@ -92,7 +93,8 @@
         </div>
       </div>
 
-      <div class="p-4 rounded space-y-2 shadow-xl">
+      <div class="p-4 rounded space-y-2 shadow-xl hover:shadow-inner hover:scale-95
+      scale-100 transition ease-in delay-75">
         <div class="bg-[#d3dede] p-10 rounded-xl">
           <img class="w-full" src="images/jacket-2.png" alt="">
         </div>
@@ -104,7 +106,8 @@
         </div>
       </div>
       
-      <div class="p-4 rounded space-y-2 shadow-xl">
+      <div class="p-4 rounded space-y-2 shadow-xl hover:shadow-inner hover:scale-95
+      scale-100 transition ease-in delay-75">
         <div class="bg-[#d3dede] p-10 rounded-xl">
           <img class="w-full" src="images/jacket-3.png" alt="">
         </div>
@@ -122,9 +125,10 @@
   <!-- man jacket section -->
   <section class="py-8  px-4 md:px-0">
     <h1 class="text-3xl font-bold uppercase">Man <span class="text-violet-900">Jacket</span></h1>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-10 my-4">
+    <div class="grid grid-cols-1 md:grid-cols-3 md:gap-16 gap-10 my-4">
 
-      <div class="p-4 rounded space-y-2 shadow-xl">
+      <div class="p-4 rounded space-y-2 shadow-xl hover:shadow-inner hover:scale-95
+       scale-100 transition ease-in delay-75">
         <div class="bg-[#d3dede] p-10 rounded-xl">
           <img class="w-full" src="images/jacket-4.png" alt="">
         </div>
@@ -136,7 +140,8 @@
         </div>
       </div>
 
-      <div class="p-4 rounded space-y-2 shadow-xl">
+      <div class="p-4 rounded space-y-2 shadow-xl hover:shadow-inner hover:scale-95
+      scale-100 transition ease-in delay-75">
         <div class="bg-[#d3dede] p-10 rounded-xl">
           <img class="w-full" src="images/jacket-5.png" alt="">
         </div>
@@ -148,7 +153,8 @@
         </div>
       </div>
       
-      <div class="p-4 rounded space-y-2 shadow-xl">
+      <div class="p-4 rounded space-y-2 shadow-xl hover:shadow-inner hover:scale-95
+      scale-100 transition ease-in delay-75">
         <div class="bg-[#d3dede] p-10 rounded-xl">
           <img class="w-full" src="images/jacket-6.png" alt="">
         </div>
